force-app/main/default/objects/Asset_upload_to_SF__c/Asset_upload_to_SF__c.object-meta.xml
<CustomObject>
    <label>ICT Assets</label>
    <nameField>
        <label>ICT Assets</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICT Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>