force-app/main/default/objects/Asset_upload_to_SF__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ICT Assets</relationshipLabel>
    <relationshipName>ICT_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>