force-app/main/default/objects/Asset_upload_to_SF__c/fields/BIT_Locker_Recovery_Key__c.field-meta.xml
<CustomField>
    <fullName>BIT_Locker_Recovery_Key__c</fullName>
    <label>BIT Locker Recovery Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>