force-app/main/default/objects/Asset_upload_to_SF__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Computer</fullName>
                <label>COMPUTER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>