force-app/main/default/objects/Asset_upload_to_SF__c/fields/CommentsNotes__c.field-meta.xml
<CustomField>
    <fullName>CommentsNotes__c</fullName>
    <label>Comments/Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>