force-app/main/default/objects/Asset_upload_to_SF__c/fields/Computer_Name__c.field-meta.xml
<CustomField>
    <fullName>Computer_Name__c</fullName>
    <label>Computer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>