force-app/main/default/objects/Asset_upload_to_SF__c/fields/Fixed_Asset__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Asset__c</fullName>
    <label>Fixed Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>