force-app/main/default/objects/Asset_upload_to_SF__c/fields/Hard_drive__c.field-meta.xml
<CustomField>
    <fullName>Hard_drive__c</fullName>
    <label>Hard drive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>