force-app/main/default/objects/Asset_upload_to_SF__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <type>TextArea</type>
</CustomField>