force-app/main/default/objects/Asset_upload_to_SF__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Latam</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>