force-app/main/default/objects/Asset_upload_to_SF__c/fields/Needs_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Needs_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Reviewed</label>
    <type>Checkbox</type>
</CustomField>