force-app/main/default/objects/Asset_upload_to_SF__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <label>Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>