force-app/main/default/objects/Asset_upload_to_SF__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <label>Purchase Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>