force-app/main/default/objects/Asset_upload_to_SF__c/fields/RAM__c.field-meta.xml
<CustomField>
    <fullName>RAM__c</fullName>
    <label>RAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>