force-app/main/default/objects/Asset_upload_to_SF__c/fields/Retired_date__c.field-meta.xml
<CustomField>
    <fullName>Retired_date__c</fullName>
    <label>Retired date</label>
    <type>Date</type>
</CustomField>