force-app/main/default/objects/Asset_upload_to_SF__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>What is the status on the ICT Asset?</description>
    <inlineHelpText>What is the status on the ICT Asset?</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unallocated Asset</fullName>
                <default>true</default>
                <label>Unallocated Asset</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Retired Asset</fullName>
            </value>
            <value>
                <fullName>Wiped</fullName>
            </value>
            <value>
                <fullName>Donated</fullName>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>