force-app/main/default/objects/Asset_upload_to_SF__c/fields/X2022_True_Up__c.field-meta.xml
<CustomField>
    <fullName>X2022_True_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2022 True Up</label>
    <type>Checkbox</type>
</CustomField>