force-app/main/default/objects/Asset_upload_to_SF__c/listViews/Active_computers.listView-meta.xml
<ListView>
    <fullName>Active_computers</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Fixed_Asset__c</columns>
    <columns>Computer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Retired_date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Computer</value>
    </filters>
    <label>Active Computers</label>
</ListView>