force-app/main/default/objects/Asset_upload_to_SF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Serial_Number__c</columns>
    <columns>Fixed_Asset__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Computer_Name__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>CommentsNotes__c</columns>
    <columns>Needs_Reviewed__c</columns>
    <columns>Model__c</columns>
    <columns>Retired_date__c</columns>
    <columns>Purchase_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>