force-app/main/default/objects/Asset_upload_to_SF__c/listViews/Backup_Available_Laptops.listView-meta.xml
<ListView>
    <fullName>Backup_Available_Laptops</fullName>
    <columns>NAME</columns>
    <columns>Assigned_to__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Model__c</columns>
    <columns>Processor__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>RAM__c</columns>
    <columns>Hard_drive__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Karthik</value>
    </filters>
    <filters>
        <field>Assigned_to__c</field>
        <operation>equals</operation>
        <value>Unallocated Asset</value>
    </filters>
    <label>Canada Backup/Available Laptops</label>
</ListView>